# dwt-ci-airflow

./: .envrc.example  README.md  terraform.mk  workflow.mk
airflow/: .envrc.example  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/src/: cereal_insights_dag.py  tutorial_dag.py
airflow/tests/: test_tutorial_dag.py
aws-policies/: tf_staging_iam_policy.json
ci/: Dockerfile  airflow.env  docker-compose.yaml
scripts/: application_start.sh
terraform/modules/codedeploy/: README.md
terraform/modules/codepipeline/: README.md
terraform/production/: locals.tf  terraform.tfvars.sample  variables.tf
terraform/staging/: codepipeline.tf  locals.tf  providers.tf  terraform.tfvars.sample  variables.tf
