[tool.poetry]
name = "dwt-airflow-template"
version = "0.1.0"
description = "Data Engineering team's Airflow template"
authors = ["Thinking Machines Data Science, Inc."]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = { version = "2.9.3", python = ">=3.10,<3.13" }
aiohttp = "3.9.5"
aiosignal = "1.3.1"
alembic = "1.13.2"
anyio = "4.4.0"
apache-airflow-providers-common-io = "1.3.2"
apache-airflow-providers-common-sql = "1.14.2"
apache-airflow-providers-fab = "1.2.1"
apache-airflow-providers-ftp = "3.10.0"
apache-airflow-providers-http = "4.12.0"
apache-airflow-providers-imap = "3.6.1"
apache-airflow-providers-smtp = "1.7.1"
apache-airflow-providers-sqlite = "3.8.1"
apispec = "6.6.1"
argcomplete = "3.4.0"
asgiref = "3.8.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
babel = "2.15.0"
blinker = "1.8.2"
cachelib = "0.9.0"
certifi = "2024.7.4"
cffi = "1.16.0"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
clickclick = "20.10.2"
colorama = "0.4.6"
colorlog = "4.8.0"
configupdater = "3.2"
connexion = "2.14.2"
cron-descriptor = "1.4.3"
croniter = "2.0.5"
cryptography = "41.0.7"
deprecated = "1.2.14"
dill = "0.3.1.1"
distlib = "0.3.8"
dnspython = "2.6.1"
docutils = "0.16"
email-validator = "2.2.0"
exceptiongroup = "1.2.1"
filelock = "3.15.4"
flask = "2.2.5"
flask-appbuilder = "4.5.0"
flask-babel = "2.0.0"
flask-caching = "2.3.0"
flask-jwt-extended = "4.6.0"
flask-limiter = "3.7.0"
flask-login = "0.6.3"
flask-session = "0.5.0"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.2.1"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
google-re2 = "1.1.20240702"
googleapis-common-protos = "1.63.2"
greenlet = "3.0.3"
grpcio = "1.64.1"
gunicorn = "22.0.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
identify = "2.6.0"
idna = "3.7"
importlib-metadata = "6.11.0"
importlib-resources = "6.4.0"
inflection = "0.5.1"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jmespath = "0.10.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
lazy-object-proxy = "1.10.0"
limits = "3.13.0"
linkify-it-py = "2.0.3"
lockfile = "0.12.2"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
marshmallow-oneofschema = "3.1.1"
marshmallow-sqlalchemy = "0.28.2"
mdit-py-plugins = "0.4.1"
mdurl = "0.1.2"
methodtools = "0.4.7"
more-itertools = "10.3.0"
multidict = "6.0.5"
nodeenv = "1.9.1"
opentelemetry-api = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"
opentelemetry-exporter-otlp-proto-common = "1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "1.25.0"
opentelemetry-exporter-otlp-proto-http = "1.25.0"
opentelemetry-proto = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-semantic-conventions = "0.46b0"
ordered-set = "4.1.0"
packaging = "24.1"
pathspec = "0.12.1"
pendulum = "3.0.0"
platformdirs = "4.2.2"
pluggy = "1.5.0"
pre-commit = "3.8.0"
prison = "0.2.1"
protobuf = "4.25.3"
psutil = "6.0.0"
pycparser = "2.22"
pygments = "2.18.0"
pyjwt = "2.8.0"
pytest = "8.3.2"
python-daemon = "3.0.1"
python-dateutil = "2.9.0.post0"
python-nvd3 = "0.16.0"
python-slugify = "8.0.4"
pytz = "2024.1"
pyyaml = "6.0.1"
referencing = "0.35.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rich = "13.7.1"
rich-argparse = "1.5.2"
rpds-py = "0.19.0"
setproctitle = "1.3.3"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "1.4.52"
sqlalchemy-jsonfield = "1.0.2"
sqlalchemy-utils = "0.41.2"
sqlparse = "0.5.0"
tabulate = "0.9.0"
tenacity = "8.5.0"
termcolor = "2.4.0"
text-unidecode = "1.3"
time-machine = "2.14.2"
tomli = "2.0.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uc-micro-py = "1.0.3"
unicodecsv = "0.14.1"
universal-pathlib = "0.2.2"
urllib3 = "2.0.7"
virtualenv = "20.26.3"
werkzeug = "2.2.3"
wirerope = "0.4.7"
wrapt = "1.16.0"
wtforms = "3.1.2"
yarl = "1.9.4"
zipp = "3.19.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
